Tue Jan 20 20:46:45 GMT  2015  Lee Noar  <leenoar@sky.com>

	* incl-local/stdlib.h(__atexit_function_array): Convert
	to array of __atexit_function_entry so that we can support
	__cxa_atexit.
	* stdlib/atexit.c(__cxa_atexit): Add.
	(atexit): Implement using __cxa_atexit.
	* unix/unix.c(exit): Follow changes above.

Sun Nov 23 14:53:00 GMT  2014  Lee Noar  <leenoar@sky.com>

	* pthread/cancel.c(__pthread_pull_gthr_weak): Remove. We
	now disable weak pthread symbols when building libstdc++
	as static.

Mon Jul  7 19:33:00 BST  2014  Lee Noar  <leenoar@sky.com>

	* signal/post.c(extract_name): Return whether the function name
	was demangled.
	(__write_backtrace_thread): Don't output empty brackets for a
	demangled function name.

Fri Jul  4 18:36:11 BST  2014  Lee Noar  <leenoar@sky.com>

	* include/dlfcn.h: Define RTLD_DEFAULT to be 0.

Sat Apr 26 16:55:28 CEST 2014  John Tytgat  <John.Tytgat@aaug.net>

	* include/unixlib/local.h (__unixlib_write_coredump): Constify return
	pointer.
	* sys/mman.c (__unixlib_write_coredump): Likewise.
	* signal/post.c (post_signal): Follow.

Tue Apr 22 00:07:32 CEST 2014  John Tytgat  <John.Tytgat@aaug.net>

	* signal/_signal.s (__h_sigill): Undo lr correction.
	(__h_sigbus): Likewise.
	(__h_sigsegv0): Likewise.
	(__h_sigsegv1): Likewise.
	* signal/post.c (extract_name): Use __valid_address to check incoming
	pc value. Don't return NULL but pointer to "?" when failing.
	(__write_backtrace_thread): More accurate __valid_address checking.
	Simplify extract_name calling.  Fix pc adjusting.
	* test/sys/handlers.c: Add.

Sun Mar  9 15:22:24 CET 2014  John Tytgat  <John.Tytgat@aaug.net>

	* time/localtime_r.c (localtime_r): Reduce ordinals entries from 15 to
	9.
	(SWI_Territory_ConvertTimeToOrdinals): Move to...
	* incl-local/internal/os.h: ...here.
	* time/mktime.c (mktime): Drop __os_swi usage and use
	SWI_Territory_ConvertTimeToOrdinals instead.
	* unittest/test-utimes.c: Fix comment.
